--- a/portfolio.html
+++ b/portfolio.html
@@ -3,10 +3,12 @@
 
 <head>
   <title>goit-markup-hw-02</title>
+  <link href="./css/style.css" rel="stylesheet">
 </head>
 
 <body>
-  <header><a href="./index.html">WebStudio</a>
+  <header>
+    <a class="logo-link" href="./index.html" lang="en">Web<span class="accentlogo">Studio</span></a>
     <nav>
       <ul>
         <li><a href="#" class="link-inline">Студия</a> </li>
@@ -16,16 +18,16 @@
     </nav>
 
     <a href="#" class="link-inline">info@devstudio.com</a>
-    <a href="#" class="link-inline">+38 096 111 11 11</a>
+    <a href="#" class="link-inline2">+38 096 111 11 11</a>
   </header>
 
   <main>
     <section>
-      <button type="button" class="button">Все</button>
-      <button type="button" class="button">Веб-сайты</button>
-      <button type="button" class="button">Приложения</button>
-      <button type="button" class="button">Дизайн</button>
-      <button type="button" class="button">Маркетинг</button>
+      <button type="button" class="button2">Все</button>
+      <button type="button" class="button2">Веб-сайты</button>
+      <button type="button" class="button2">Приложения</button>
+      <button type="button" class="button2">Дизайн</button>
+      <button type="button" class="button2">Маркетинг</button>
     </section>
 
     <section>
@@ -94,14 +96,14 @@
   </main>
 
   <footer>
-    <a href="">WebStudio</a>
+    <a class="logo-link" href="./index.html" lang="en">Web<span class="accentlogo2">Studio</span></a>
     <adress>
       <br>
       <a href="#" class="link-inline">г. Киев, пр-т Леси Украинки, 26 </a>
       <br>
-      <a href="#" class="link-inline">info@example</a>
+      <a href="#" class="link-inline2">info@example</a>
       <br>
-      <a href="#" class="link-inline">+38 099 111 11 11</a>
+      <a href="#" class="link-inline2">+38 099 111 11 11</a>
     </adress>
   </footer>
 
