--- a/index.html
+++ b/index.html
@@ -3,26 +3,27 @@
 
 <head>
   <title>goit-markup-hw-01</title>
+  <link href="./css/style.css" rel="stylesheet">
 </head>
 
 <body>
-  <header><a href="">WebStudio</a>
+    <a class="logo-link" href="./index.html" lang="en">Web<span class="accentlogo">Studio</span></a>
     <nav>
       <ul>
         <li><a href="#" class="link-inline">Студия</a> </li>
-        <li><a href="#" class="link-inline">Портфолио</a></li>
+        <li><a href="./portfolio.html" class="link-inline">Портфолио</a></li>
         <li><a href="#" class="link-inline">Контакты</a></li>
       </ul>
     </nav>
 
     <a href="#" class="link-inline">info@devstudio.com</a>
-    <a href="#" class="link-inline">+38 096 111 11 11</a>
+    <a href="#" class="link-inline2">+38 096 111 11 11</a>
   </header>
 
   <main>
     <section>
-      <h1>ЭФФЕКТИВНЫЕ РЕШЕНИЯ <br> ДЛЯ ВАШЕГО БИЗНЕСА</h1>
-      <button type="button" class="button">Заказать услугу</button>
+      <h1 class="main-logo">ЭФФЕКТИВНЫЕ РЕШЕНИЯ <br> ДЛЯ ВАШЕГО БИЗНЕСА</h1>
+      <button type="button" class="button1">Заказать услугу</button>
     </section>
     <section>
       <ul>
@@ -88,14 +89,14 @@
 
   </main>
   <footer>
-    <a href="">WebStudio</a>
+    <a class="logo-link" href="./index.html" lang="en">Web<span class="accentlogo2">Studio</span></a>
     <adress>
       <br>
       <a href="#" class="link-inline">г. Киев, пр-т Леси Украинки, 26 </a>
       <br>
-      <a href="#" class="link-inline">info@example</a>
+      <a href="#" class="link-inline2">info@example</a>
       <br>
-      <a href="#" class="link-inline">+38 099 111 11 11</a>
+      <a href="#" class="link-inline2">+38 099 111 11 11</a>
     </adress>
   </footer>
 </body>
