--- a/index.html
+++ b/index.html
@@ -4,6 +4,11 @@
 <head>
   <title>goit-markup-hw-01</title>
   <link href="./css/style.css" rel="stylesheet">
+  <link rel="preconnect" href="https://fonts.googleapis.com">
+  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+  <link rel="preconnect" href="https://fonts.googleapis.com">
+  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+  <link href="https://fonts.googleapis.com/css2?family=Raleway:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;0,900;1,100;1,300;1,400;1,500;1,700;1,900&display=swap" rel="stylesheet">
 </head>
 
 <body>
@@ -28,30 +33,30 @@
     <section>
       <ul>
         <li>
-          <h3>Внимание к деталям</h3>
-          <p>Идейные соображения,а также начало повседневной работы по формированию позиции.</p>
+          <h3 class="main-zag">Внимание к деталям</h3>
+          <p class="main-par">Идейные соображения,а также начало повседневной работы по формированию позиции.</p>
         </li>
 
         <li>
-          <h3>Пунктуальность</h3>
-          <p>Задача организации,в особенности же рамки и место обучения кадров влечет за собой.</p>
+          <h3 class="main-zag">Пунктуальность</h3>
+          <p class="main-par">Задача организации,в особенности же рамки и место обучения кадров влечет за собой.</p>
         </li>
 
         <li>
-          <h3>Планирование</h3>
-          <p>Равным образом консультация с широким активом в значительной степени обуславливает.</p>
+          <h3 class="main-zag">Планирование</h3>
+          <p class="main-par">Равным образом консультация с широким активом в значительной степени обуславливает.</p>
         </li>
 
         <li>
-          <h3>Современные технологии</h3>
-          <p>Значимость этих проблем настолько очевидна,что реализация плановых заданий.
+          <h3 class="main-zag">Современные технологии</h3>
+          <p class="main-par">Значимость этих проблем настолько очевидна,что реализация плановых заданий.
           </p>
         </li>
       </ul>
     </section>
 
     <section>
-      <h2>Чем мы занимаемся</h2>
+      <h2 class="main-zag-2">Чем мы занимаемся</h2>
       <ul>
         <li><img src="./media/zan1.jpeg" alt="занятие1" width="370" height="294" /> </li>
         <li> <img src="./media/zan2.jpeg" alt="занятие2" width="370" height="294" /> </li>
@@ -61,27 +66,27 @@
 
     <section>
 
-      <h2>Наша команда</h2>
+      <h2 class="main-zag-2">Наша команда</h2>
       <ul>
         <li>
           <img src="./media/igor.jpeg" alt="игорь фото" width="270" height="260" />
-          <h3>Игорь Демьяненко</h3>
-          <p>Product Designer</p>
+          <h3 class="name">Игорь Демьяненко</h3>
+          <p class="prof">Product Designer</p>
         </li>
 
         <li><img src="./media/ola.jpeg" alt="ольга фото" width="270" height="260" />
-          <h3>Ольга Репина</h3>
-          <p>Frontend Developer</p>
+          <h3 class="name">Ольга Репина</h3>
+          <p class="prof">Frontend Developer</p>
         </li>
 
         <li><img src="./media/nic.jpeg" alt="николай фото" width="270" height="260" />
-          <h3>Николай Тарасов</h3>
-          <p>Marketing</p>
+          <h3 class="name">Николай Тарасов</h3>
+          <p class="prof">Marketing</p>
         </li>
 
         <li><img src="./media/mih.jpeg" alt="михаил фото" width="270" height="260" />
-          <h3>Михаил Ермаков</h3>
-          <p>UI Designer</p>
+          <h3 class="name">Михаил Ермаков</h3>
+          <p class="prof">UI Designer</p>
         </li>
       </ul>
 
