--- a/portfolio.html
+++ b/portfolio.html
@@ -4,6 +4,9 @@
 <head>
   <title>goit-markup-hw-02</title>
   <link href="./css/style.css" rel="stylesheet">
+  <link rel="preconnect" href="https://fonts.googleapis.com">
+  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+  <link href="https://fonts.googleapis.com/css2?family=Raleway:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;0,900;1,100;1,300;1,400;1,500;1,700;1,900&display=swap" rel="stylesheet">
 </head>
 
 <body>
@@ -23,73 +26,87 @@
 
   <main>
     <section>
-      <button type="button" class="button2">Все</button>
-      <button type="button" class="button2">Веб-сайты</button>
-      <button type="button" class="button2">Приложения</button>
-      <button type="button" class="button2">Дизайн</button>
-      <button type="button" class="button2">Маркетинг</button>
-    </section>
+      <ul>
+        <li>
+          <button type="button" class="button2">Все</button>
+        </li>
 
-    <section>
+        <li>
+          <button type="button" class="button2">Веб-сайты</button>
+        </li>
+
+        <li>
+          <button type="button" class="button2">Приложения</button>
+        </li>
+
+        <li>
+          <button type="button" class="button2">Дизайн</button>
+        </li>
+
+        <li>
+          <button type="button" class="button2">Маркетинг</button>
+        </li>
+      </ul> 
+
       <ul>
         <li>
           <img src="./media/imgtexno.jpg" alt="технохряк" width="370" height="294" />
-          <h3>Технохряк</h3>
-          <p>Веб-сайт</p>
+          <h3 class="name2">Технохряк</h3>
+          <p class="prof2">Веб-сайт</p>
         </li>
 
         <li>
           <img src="./media/imgposter.jpg" alt="постер" width="370" height="294" />
-          <h3>Постер New Orlean vs Golden Star</h3>
-          <p>Дизайн</p>
+          <h3 class="name2">Постер New Orlean vs Golden Star</h3>
+          <p class="prof2">Дизайн</p>
         </li>
 
         <li>
           <img src="./media/imgrestoran.jpg" alt="ресторан" width="370" height="294" />
-          <h3>Ресторан Seafood</h3>
-          <p>Приложение</p>
+          <h3 class="name2">Ресторан Seafood</h3>
+          <p class="prof2">Приложение</p>
         </li>
 
         <li>
           <img src="./media/imgproekt.jpg" alt="проект прайм" width="370" height="294" />
-          <h3>Проект Prime</h3>
-          <p>Маркетинг</p>
+          <h3 class="name2">Проект Prime</h3>
+          <p class="prof2">Маркетинг</p>
         </li>
 
         <li>
           <img src="./media/imgproekt2.jpg" alt="проект боксы" width="370" height="294" />
-          <h3>Проект Prime</h3>
-          <p>Приложение</p>
+          <h3 class="name2">Проект Prime</h3>
+          <p class="prof2">Приложение</p>
         </li>
 
         <li>
           <img src="./media/imgins.jpg" alt="inspiration сайт" width="370" height="294" />
-          <h3>Inspiration has no Borders</h3>
-          <p>Веб-сайт</p>
+          <h3 class="name2">Inspiration has no Borders</h3>
+          <p class="prof2">Веб-сайт</p>
         </li>
 
         <li>
           <img src="./media/imgrestoran.jpg" alt="ресторан" width="370" height="294" />
-          <h3>Ресторан Seafood</h3>
-          <p>Приложение</p>
+          <h3 class="name2">Ресторан Seafood</h3>
+          <p class="prof2">Приложение</p>
         </li>
 
         <li>
           <img src="./media/imgizdanie.jpg" alt="издание" width="370" height="294" />
-          <h3>Издание Limited Edition</h3>
-          <p>Дизайн</p>
+          <h3 class="name2">Издание Limited Edition</h3>
+          <p class="prof2">Дизайн</p>
         </li>
 
         <li>
           <img src="./media/imglab.jpg" alt="lab проект" width="370" height="294" />
-          <h3>Проект Lab</h3>
-          <p>Маркетинг</p>
+          <h3 class="name2">Проект Lab</h3>
+          <p class="prof2">Маркетинг</p>
         </li>
 
         <li>
           <img src="./media/imggrow.jpg" alt="grow business" width="370" height="294" />
-          <h3>Growing Business</h3>
-          <p>Приложение</p>
+          <h3 class="name2">Growing Business</h3>
+          <p class="prof2">Приложение</p>
         </li>
       </ul>
     </section>
