--- a/portfolio.html
+++ b/portfolio.html
@@ -20,7 +20,7 @@
       </ul>
     </nav>
 
-    <a href="#" class="link-inline">info@devstudio.com</a>
+    <a href="#" class="link-inline2">info@devstudio.com</a>
     <a href="#" class="link-inline2">+38 096 111 11 11</a>
   </header>
 
@@ -116,7 +116,7 @@
     <a class="logo-link" href="./index.html" lang="en">Web<span class="accentlogo2">Studio</span></a>
     <adress>
       <br>
-      <a href="#" class="link-inline">г. Киев, пр-т Леси Украинки, 26 </a>
+      <a href="#" class="link-inline3">г. Киев, пр-т Леси Украинки, 26 </a>
       <br>
       <a href="#" class="link-inline2">info@example</a>
       <br>
